// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical On Demand T V Page A11y I can see the skip to content link 1`] = `"مطلب ته ورشئ"`;

exports[`Canonical On Demand T V Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical On Demand T V Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical On Demand T V Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "68",
  },
  {
    "p": "pashto.bbc_pashto_tv.tv_programmes.w13xttn4.page",
  },
  {
    "x1": "[urn:bbc:pips:w13xttn4]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-pashto]",
  },
  {
    "x4": "[ps]",
  },
  {
    "x7": "[player-episode]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[د%20بي%20بي%20سي%20خبرونه%20%20-%20BBC%20News%20پښتو]",
  },
]
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, پښتو",
  "url": "/pashto",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 2`] = `
{
  "text": "ولې تاسې پر بي بي سي خبرونو باور کولی شئ",
  "url": "https://www.bbc.com/pashto/institutional-49283007",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 3`] = `
{
  "text": "د کارولو شرايط",
  "url": "https://www.bbc.com/pashto/institutional-37620701",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 4`] = `
{
  "text": "د بي بي سي‌ په اړه",
  "url": "https://www.bbc.com/pashto/institutional-37622761",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 5`] = `
{
  "text": "د محرميت تگلاره",
  "url": "https://www.bbc.com/pashto/institutional-37622762",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 7`] = `
{
  "text": "زموږ سره اړیکي",
  "url": "https://www.bbc.co.uk/pashto/send/u50853533",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 8`] = `
{
  "text": "نورې ژبې",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 9`] = `
{
  "text": "د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical On Demand T V Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pashto"`;

exports[`Canonical On Demand T V Page Footer Paragraphs should match text 1`] = `"© 2025 بي بي سي. بي بي‌ سي‌ د نورو ویبپاڼو د محتوا مسوله نه ده. د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره."`;

exports[`Canonical On Demand T V Page Header I can see the branding 1`] = `"BBC News, پښتو"`;

exports[`Canonical On Demand T V Page I can see the brand title 1`] = `" د بي بي سي خبرونه "`;

exports[`Canonical On Demand T V Page I can see the episode summary 1`] = `
"نړۍ دا وخت، د نړۍ او سیمې وروستۍ پرمختیاوې یادوي
"
`;

exports[`Canonical On Demand T V Page I can see the episode title 1`] = `" د بي بي سي خبرونه "`;

exports[`Canonical On Demand T V Page Main heading should match text 1`] = `" د بي بي سي خبرونه , ۲۱ نومبر ۲۰۲۴"`;

exports[`Canonical On Demand T V Page Media Loader a11y assistive technology can read the media player title 1`] = `"Play video, " د بي بي سي خبرونه ", موده 28,00"`;

exports[`Canonical On Demand T V Page Media Loader renders a figure caption 1`] = `
<div
  class="bbc-145siv3"
  data-e2e="media-loader__placeholder"
>
  <div
    class="bbc-1u05bd9"
    data-e2e="media-player__guidance"
  >
    <noscript
      class="bbc-n2zqlz"
    >
      <strong>
        په دې وسیله کې د غږ اوريدل او ویډیو لیدنه شونې نه ده.
      </strong>
    </noscript>
  </div>
  <button
    class="focusIndicatorRemove bbc-1s7djye"
    type="button"
  >
    <span
      class="bbc-m04vo2"
    >
      Play video, " د بي بي سي خبرونه ", موده 28,00
    </span>
    <div
      aria-hidden="true"
      class="bbc-7qcky8"
    >
      <svg
        aria-hidden="true"
        class="bbc-vja2s5 e1s2dgdk5"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="bbc-digyti"
      datetime="PT28M"
    >
      28:00
    </time>
  </button>
  <div
    class="bbc-1jf2q50"
    style="padding-bottom:0;overflow:hidden"
  >
    <img
      alt=""
      class="bbc-ipdj63"
      loading="eager"
      src="https://ichef.bbci.co.uk/images/ic/$recipe/p0k5s1yz.png"
      srcset="https://ichef.bbci.co.uk/images/ic/240xn/p0k5s1yz.png.webp 240w, https://ichef.bbci.co.uk/images/ic/320xn/p0k5s1yz.png.webp 320w, https://ichef.bbci.co.uk/images/ic/480xn/p0k5s1yz.png.webp 480w, https://ichef.bbci.co.uk/images/ic/624xn/p0k5s1yz.png.webp 624w, https://ichef.bbci.co.uk/images/ic/800xn/p0k5s1yz.png.webp 800w"
      style="aspect-ratio:auto"
    />
  </div>
</div>
`;

exports[`Canonical On Demand T V Page Media Loader renders a placeholder 1`] = `
<div
  class="bbc-145siv3"
  data-e2e="media-loader__placeholder"
>
  <div
    class="bbc-1u05bd9"
    data-e2e="media-player__guidance"
  >
    <noscript
      class="bbc-n2zqlz"
    >
      <strong>
        په دې وسیله کې د غږ اوريدل او ویډیو لیدنه شونې نه ده.
      </strong>
    </noscript>
  </div>
  <button
    class="focusIndicatorRemove bbc-1s7djye"
    type="button"
  >
    <span
      class="bbc-m04vo2"
    >
      Play video, " د بي بي سي خبرونه ", موده 28,00
    </span>
    <div
      aria-hidden="true"
      class="bbc-7qcky8"
    >
      <svg
        aria-hidden="true"
        class="bbc-vja2s5 e1s2dgdk5"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="bbc-digyti"
      datetime="PT28M"
    >
      28:00
    </time>
  </button>
  <div
    class="bbc-1jf2q50"
    style="padding-bottom:0;overflow:hidden"
  >
    <img
      alt=""
      class="bbc-ipdj63"
      loading="eager"
      src="https://ichef.bbci.co.uk/images/ic/$recipe/p0k5s1yz.png"
      srcset="https://ichef.bbci.co.uk/images/ic/240xn/p0k5s1yz.png.webp 240w, https://ichef.bbci.co.uk/images/ic/320xn/p0k5s1yz.png.webp 320w, https://ichef.bbci.co.uk/images/ic/480xn/p0k5s1yz.png.webp 480w, https://ichef.bbci.co.uk/images/ic/624xn/p0k5s1yz.png.webp 624w, https://ichef.bbci.co.uk/images/ic/800xn/p0k5s1yz.png.webp 800w"
      style="aspect-ratio:auto"
    />
  </div>
</div>
`;

exports[`Canonical On Demand T V Page Media Loader renders a valid container 1`] = `
<figure
  class="media-container bbc-1ayt58x"
  data-e2e="media-loader__container"
>
  <div
    class="bbc-145siv3"
    data-e2e="media-loader__placeholder"
  >
    <div
      class="bbc-1u05bd9"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="bbc-n2zqlz"
      >
        <strong>
          په دې وسیله کې د غږ اوريدل او ویډیو لیدنه شونې نه ده.
        </strong>
      </noscript>
    </div>
    <button
      class="focusIndicatorRemove bbc-1s7djye"
      type="button"
    >
      <span
        class="bbc-m04vo2"
      >
        Play video, " د بي بي سي خبرونه ", موده 28,00
      </span>
      <div
        aria-hidden="true"
        class="bbc-7qcky8"
      >
        <svg
          aria-hidden="true"
          class="bbc-vja2s5 e1s2dgdk5"
          focusable="false"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M.5.6h12v12H.5z"
            />
            <path
              d="M2.144.96v11.28l8.712-5.64z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="bbc-digyti"
        datetime="PT28M"
      >
        28:00
      </time>
    </button>
    <div
      class="bbc-1jf2q50"
      style="padding-bottom:0;overflow:hidden"
    >
      <img
        alt=""
        class="bbc-ipdj63"
        loading="eager"
        src="https://ichef.bbci.co.uk/images/ic/$recipe/p0k5s1yz.png"
        srcset="https://ichef.bbci.co.uk/images/ic/240xn/p0k5s1yz.png.webp 240w, https://ichef.bbci.co.uk/images/ic/320xn/p0k5s1yz.png.webp 320w, https://ichef.bbci.co.uk/images/ic/480xn/p0k5s1yz.png.webp 480w, https://ichef.bbci.co.uk/images/ic/624xn/p0k5s1yz.png.webp 624w, https://ichef.bbci.co.uk/images/ic/800xn/p0k5s1yz.png.webp 800w"
        style="aspect-ratio:auto"
      />
    </div>
  </div>
</figure>
`;

exports[`Canonical On Demand T V Page SEO Canonical link 1`] = `"http://localhost:7080/pashto/bbc_pashto_tv/tv_programmes/w13xttn4"`;

exports[`Canonical On Demand T V Page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical On Demand T V Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical On Demand T V Page SEO Heading level 1 1`] = `" د بي بي سي خبرونه , ۲۱ نومبر ۲۰۲۴"`;

exports[`Canonical On Demand T V Page SEO Lang attribute 1`] = `"ps"`;

exports[`Canonical On Demand T V Page SEO OG description 1`] = `
"نړۍ دا وخت، د نړۍ او سیمې وروستۍ پرمختیاوې یادوي
"
`;

exports[`Canonical On Demand T V Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"`;

exports[`Canonical On Demand T V Page SEO OG image alt 1`] = `"BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO OG locale 1`] = `"ps"`;

exports[`Canonical On Demand T V Page SEO OG site name 1`] = `"BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO OG title 1`] = `" د بي بي سي خبرونه  -  د بي بي سي خبرونه  - BBC News پښتو - BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO OG type 1`] = `"website"`;

exports[`Canonical On Demand T V Page SEO OG url 1`] = `"http://localhost:7080/pashto/bbc_pashto_tv/tv_programmes/w13xttn4"`;

exports[`Canonical On Demand T V Page SEO Page title 1`] = `" د بي بي سي خبرونه  -  د بي بي سي خبرونه  - BBC News پښتو - BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical On Demand T V Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical On Demand T V Page SEO Twitter creator 1`] = `"@bbcpashto"`;

exports[`Canonical On Demand T V Page SEO Twitter description 1`] = `
"نړۍ دا وخت، د نړۍ او سیمې وروستۍ پرمختیاوې یادوي
"
`;

exports[`Canonical On Demand T V Page SEO Twitter image alt 1`] = `"BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"`;

exports[`Canonical On Demand T V Page SEO Twitter site 1`] = `"@bbcpashto"`;

exports[`Canonical On Demand T V Page SEO Twitter title 1`] = `" د بي بي سي خبرونه  -  د بي بي سي خبرونه  - BBC News پښتو - BBC News پښتو"`;

exports[`Canonical On Demand T V Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `" د بي بي سي خبرونه , ۲۱ نومبر ۲۰۲۴"`;
